--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-material-ui-chrome-extension-template",
+  "name": "BrowserTime",
   "version": "1.0.0",
-  "description": "react + webpack chrome extension starter",
+  "description": "screen time for your browser history",
   "main": "index.js",
   "author": "Sean Miller",
   "license": "MIT",
@@ -11,17 +11,20 @@
     "build": "NODE_ENV=production webpack"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@babel/polyfill": "^7.8.7",
+    "@date-io/date-fns": "1.x",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
-    "D": "^1.0.0",
+    "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
+    "moment": "^2.25.3",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-window": "^1.8.5",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1",
