--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self'",
-  "name": "my-extension-template",
-  "short_name": "my-extension",
+  "name": "BrowserTime",
+  "short_name": "BrowserTime",
   "author": "Sean Miller",
   "icons": {
     "16": "icons/icon-16.png",
@@ -11,10 +11,11 @@
     "128": "icons/icon-128.png"
   },
   "permissions": [
-    "bookmarks",
-    "storage"
+    "history",
+    "storage",
+    "browsingData"
   ],
   "chrome_url_overrides": {
-    "bookmarks": "bookmarks.html"
+    "history": "history.html"
   }
 }
