--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
-    "@date-io/date-fns": "1.x",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "^4.9.12",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
-    "date-fns": "^2.13.0",
     "dotenv": "^8.2.0",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
@@ -25,6 +24,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-window": "^1.8.5",
+    "react-window-infinite-loader": "^1.0.5",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1",
@@ -47,6 +47,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.1",
+    "moment-locales-webpack-plugin": "^1.2.0",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
     "webpack-cli": "^3.3.11"
