--- a/src/manifest.json
+++ b/src/manifest.json
@@ -13,7 +13,10 @@
   "permissions": [
     "history",
     "storage",
-    "browsingData"
+    "browsingData",
+    "topSites",
+    "background",
+    "debugger"
   ],
   "chrome_url_overrides": {
     "history": "history.html"
