--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,26 +1,23 @@
 {
   "manifest_version": 2,
+  "content_security_policy": "script-src 'self'; object-src 'self'; img-src chrome://favicon/;",
   "name": "BrowserTime",
   "short_name": "BrowserTime",
   "author": "Sean Miller",
+  "version": "1.0.0",
+  "chrome_url_overrides": {
+    "history": "history.html"
+  },
+  "permissions": [
+    "history",
+    "topSites",
+    "tabs",
+    "chrome://favicon/"
+  ],
   "icons": {
     "16": "icons/icon-16.png",
     "32": "icons/icon-32.png",
     "48": "icons/icon-48.png",
     "128": "icons/icon-128.png"
-  },
-  "permissions": [
-    "history",
-    "storage",
-    "topSites",
-    "tabs",
-    "background",
-    "debugger",
-    "webRequests",
-    "webRequestBlocking",
-    "*://*/*"
-  ],
-  "chrome_url_overrides": {
-    "history": "history.html"
   }
 }
