--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react": "^16.13.1",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
+    "react-spring": "^8.0.27",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
     "webpack": "^4.43.0",
