--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "BrowserTime",
   "version": "1.0.0",
-  "description": "screen time for your browser history",
+  "description": "Turn your browser history into a productivity tool.",
   "main": "index.js",
   "author": "Sean Miller",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "axios": "^0.19.2",
     "chart.js": "^2.9.3",
     "d3-format": "^1.4.4",
+    "d3-shape": "^2.0.0",
     "dotenv": "^8.2.0",
     "jest": "^26.0.1",
     "lodash": "^4.17.15",
@@ -39,6 +40,7 @@
     "react-spring": "^8.0.27",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
+    "recharts": "^1.8.5",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1",
