--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@material-ui/lab": "^4.0.0-alpha.53",
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
+    "@sinonjs/fake-timers": "^6.0.1",
     "axios": "^0.19.2",
     "d3-format": "^1.4.4",
     "d3-shape": "^2.0.0",
+    "dayjs": "^1.9.6",
     "dotenv": "^8.2.0",
-    "jest": "^26.0.1",
+    "expect": "^26.6.2",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "prop-types": "^15.7.2",
@@ -37,6 +39,7 @@
     "react-dom": "^16.13.1",
     "react-window": "^1.8.5",
     "react-window-infinite-loader": "^1.0.5",
+    "sinon": "^9.2.1",
     "webpack": "^4.43.0",
     "webpack-dev-server": "^3.10.3",
     "write-file-webpack-plugin": "^4.5.1",
@@ -59,6 +62,7 @@
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.1",
+    "jest": "^26.6.3",
     "moment-locales-webpack-plugin": "^1.2.0",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
