--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "start:dev": "node dev-server.js",
     "build": "NODE_ENV=production webpack",
-    "test": "jest"
+    "test": "jest",
+    "doc": "jsdoc -c jsdoc.json"
   },
   "jest": {
     "verbose": true
@@ -63,6 +64,7 @@
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.1",
     "jest": "^26.6.3",
+    "jsdoc": "^3.6.6",
     "moment-locales-webpack-plugin": "^1.2.0",
     "react-hot-loader": "^4.12.21",
     "style-loader": "^1.2.1",
