--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,6 +15,16 @@
     "unlimitedStorage",
     "chrome://favicon/"
   ],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
+  "content_scripts": [
+    {
+      "matches": ["http://*/*", "https://*/*"],
+      "js": ["timeTrack.js"]
+    }
+  ],
   "icons": {
     "16": "icons/app-icon-16.png",
     "32": "icons/app-icon-32.png",
