feedback form handling

--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "@material-ui/pickers": "^3.2.10",
     "@material-ui/styles": "^4.9.13",
     "@sinonjs/fake-timers": "^6.0.1",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "d3-format": "^1.4.4",
     "d3-shape": "^2.0.0",
     "dayjs": "^1.9.6",
     "dotenv": "^8.2.0",
     "expect": "^26.6.2",
+    "formik": "^2.2.6",
     "lodash": "^4.17.15",
     "moment": "^2.25.3",
     "prop-types": "^15.7.2",
